--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn[standard]
-sqlmodel
-python-dotenv
-httpx
-llama-cpp-python
-pydantic
-requests
-beautifulsoup4
-lxml
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+sqlmodel==0.0.14
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+pydantic==2.5.3
+pydantic-settings==2.1.0
+python-jose[cryptography]==3.3.0
+llama-cpp-python==0.2.27
+requests==2.31.0
